1st & 2nd March/01-03/Security/frontend.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: secure-app
  labels:
    app: frontend
spec:
  containers:
  - name: frontend
    image: busybox
    command: ["sleep","3600"]
