1st & 2nd March/01-03/Security/unauthorized.yml
apiVersion: v1
kind: Pod
metadata:
  name: unauthorized
  namespace: secure-app
  labels:
    app: unauthorized
spec:
  containers:
  - name: unauthorized
    image: busybox
    command: ["sleep","3600"]
